service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  # type: NodePort
  ports:
    - port: 3000
  selector:
    app: "applifting-frontend"
